--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "web-app",
+  "name": "web-app2",
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "flow-bin": "^0.40.0",
-    "react-scripts": "0.9.0"
+    "custom-react-scripts": "0.0.23",
+    "flow-bin": "^0.40.0"
   },
   "dependencies": {
     "react": "^15.4.2",
@@ -17,7 +17,6 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "flow": "flow"
+    "eject": "react-scripts eject"
   }
 }
