--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "flow-bin": "^0.40.0"
   },
   "dependencies": {
+    "koa": "^2.0.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.3",
