--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "flow-bin": "^0.40.0"
   },
   "dependencies": {
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.23.0",
+    "history": "^4.5.1",
     "koa": "^2.0.1",
+    "koa-static-folder": "^0.1.6",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.3",
@@ -18,6 +22,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "babel-node server/index.js"
   }
 }
